# sage-playground

./: README.md
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/games/battle_mogs/: Cargo.toml
backend/games/battle_mogs/src/: benchmarks.rs  filter.rs  lib.rs
backend/games/battle_mogs/src/transitions/: mod.rs
backend/games/casino_jam/: Cargo.toml
backend/games/casino_jam/src/: asset.rs  benchmarks.rs  error.rs  filter.rs  lib.rs  rules.rs
backend/games/casino_jam/src/transition/: enums.rs  mod.rs  utils.rs
backend/node/: Cargo.toml
backend/node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
backend/runtime/: Cargo.toml  README.md
backend/runtime/src/: apis.rs  benchmarks.rs  lib.rs
backend/runtime/src/configs/: mod.rs
backend/runtime/src/configs/sage/: battle_mogs.rs  casino_jam.rs  mod.rs
frontend/: README.md  config.ts  package.json  papi-config.ts  pnpm-lock.yaml  tailwind.config.ts
frontend/.papi/: polkadot-api.json
frontend/.papi/descriptors/: .gitignore  package.json
frontend/.papi/metadata/: aju.scale  ajudev.scale  casinojam.scale
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/commands/: index.ts
frontend/commands/_general/: help.ts  transfer.ts  welcome.ts  whoami.ts
frontend/commands/casinojam/: create.ts  deposit.ts  errors.ts  gamble-info.ts  gamble.ts  kick.ts  machine.ts  machines.ts  organizer.ts  player.ts  players.ts  release.ts  remove.ts  rent.ts  reserve.ts  season.ts  seat.ts  seats.ts  types.ts  util.ts
frontend/components/: extension-status.tsx
frontend/components/account/: wallet-select.tsx
frontend/components/layout/: footer.tsx
frontend/components/terminal/: command-output.tsx  command-prompt.tsx  dynamic-elements.tsx  spinner.tsx  terminal-help.tsx  terminal.tsx
frontend/components/ui/: button.tsx  inline-loader.tsx  loader.tsx  navigation-menu.tsx  progress.tsx  section.tsx  sonner.tsx  tooltip.tsx
frontend/lib/: animate-spinning.ts  command-handler.ts  format-balance.ts  is-mobile.ts  utils.ts
frontend/providers/: chain-provider.tsx
frontend/tx/: tx-notification.tsx
frontend/types/: api.ts  command.ts  index.ts
