[package]
name        = "sage-playground-node"
description = "A SAGE playground node."
publish     = false

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General
clap        = { workspace = true, features = ["derive"] }
jsonrpsee   = { workspace = true, features = ["server"] }
futures     = { workspace = true, features = ["thread-pool"] }
serde_json  = { workspace = true, default-features = true }
# Substrate
frame-benchmarking             = { workspace = true, features = ["std"] }
frame-benchmarking-cli         = { workspace = true }
frame-metadata-hash-extension  = { workspace = true, features = ["std"] }
frame-system                   = { workspace = true, features = ["std"] }
pallet-transaction-payment     = { workspace = true, features = ["std"] }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship            = { workspace = true }
sc-cli                         = { workspace = true }
sc-client-api                  = { workspace = true }
sc-consensus                   = { workspace = true }
sc-consensus-aura              = { workspace = true }
sc-consensus-grandpa           = { workspace = true }
sc-executor                    = { workspace = true }
sc-network                     = { workspace = true }
sc-offchain                    = { workspace = true }
sc-service                     = { workspace = true }
sc-telemetry                   = { workspace = true }
sc-transaction-pool            = { workspace = true }
sc-transaction-pool-api        = { workspace = true }
sp-api                         = { workspace = true, features = ["std"] }
sp-block-builder               = { workspace = true, features = ["std"] }
sp-blockchain                  = { workspace = true }
sp-consensus-aura              = { workspace = true, features = ["std"] }
sp-consensus-grandpa           = { workspace = true, features = ["std"] }
sp-core                        = { workspace = true, features = ["std"] }
sp-io                          = { workspace = true, features = ["std"] }
sp-inherents                   = { workspace = true, features = ["std"] }
sp-keyring                     = { workspace = true }
sp-runtime                     = { workspace = true, features = ["std"] }
sp-timestamp                   = { workspace = true, features = ["std"] }
substrate-frame-rpc-system     = { workspace = true }
# Runtime
sage-playground-runtime = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = ["std"]
std = [
	"clap/std",
	"futures/std",
	"frame-benchmarking/std",
	"frame-system/std",
	"frame-metadata-hash-extension/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-timestamp/std",
	"sage-playground-runtime/std",
]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sage-playground-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"sage-playground-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
