[package]
name = "game-casino-jam"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Parity codec
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }
# Substrate
frame-support      = { workspace = true }
sp-core            = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
# Ajuna
ajuna-primitives = { workspace = true }
# SAGE
sage-api = { workspace = true}

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "parity-scale-codec/std",
    "scale-info/std",
    # Ajuna
    "ajuna-primitives/std",
    # SAGE
    "sage-api/std",
]
